# pith

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  injection_pattern.md
.github/workflows/: ci.yml
bench/: README.md
bench/results/: metadata.json
bench/results/analysis/: BENCHMARK_REPORT.md  depth_curve.json  summary_stats.json
bench/results/e2e/: e2e_all.jsonl
bench/results/iso/: iso_results.jsonl
bench/results/judge/: judge_depth_results.jsonl  judge_summary.json
examples/: langchain_example.py  ollama_example.py  openai_example.py
extensions/: README.md
extensions/cursor/: README.md
extensions/langchain/: README.md  pith_langchain.py
extensions/mcp-server/: README.md  server.py
extensions/vscode/: README.md  package.json
extensions/vscode/src/: extension.ts
pith/: __init__.py  cli.py  config.py  counter.py  injection.py  main.py  optimizer.py  router.py
skills/: README.md
skills/autogen/: README.md
skills/crewai/: README.md
skills/hermes/: README.md
skills/openclaw/: README.md
tests/: test_injection.py  test_optimizer.py
